<resources>
    <string name="app_name">TMDB Client</string>
    <string name="default_value_movie_section">hey</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="favorite">Favorite</string>
    <string name="seen">Seen</string>
    <string name="text_movie_section_empty_view">Nothing to show here</string>
    <string name="text_movie_section_error_view">Error while loading movies</string>
    <string name="text_movie_review_surprise">How about some reviews implementation here? ;-) \n Feel free to fork the project and implement it!</string>
    <string name="movie_detail_section_reviews">Reviews</string>
    <string name="movie_detail_section_overview">Overview</string>
    <string name="placeholder_movie_tagline">I don\'t feel I have to wipe everybody out, Tom. Just my enemies.</string>
    <string name="slash_ten_movie_rating">/10</string>
    <string name="cd_movie_poster">Movie poster</string>
    <string name="cd_no_connection">There is no connection</string>
    <string name="no_connection_cached">No connection, but luckily we have some saved data :-)</string>
    <string name="no_connection_not_cached">No connection and no saved data :-(</string>
    <string name="action_retry">Retry</string>
</resources>
